--- a/src/components/Questions/style.css
+++ b/src/components/Questions/style.css
@@ -1,16 +1,12 @@
 .question-list {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 600px;
 }
 .question-item {
   display: flex;
-  border: 1px solid #d5d9dc;
-  border-right: none;
-  width: 728px;
-  padding: 20px 0;
+  border: 1px solid #ededed;
+  padding: 1.5rem;
+  margin-bottom: 1rem;
 }
 .question-item .cp {
   display: flex;
