--- a/src/components/Questions/style.css
+++ b/src/components/Questions/style.css
@@ -4,10 +4,10 @@
 }
 .n__question-item {
   display: flex;
-  border: 1px solid #c1c1c1;
-  padding: 1.5rem;
+  border: 1px solid #dadada;
+  padding: 1rem;
   margin-bottom: 1rem;
-  border-radius: .1rem;
+  border-radius: .4rem;
   flex-wrap: wrap;
 }
 .n__question-item .cp {
@@ -16,6 +16,7 @@
   flex-wrap: nowrap;
   padding: 0 8px 0 0;
   font-size: 14px;
+
 }
 .n__question-item .cp .votes,
 .n__question-item .cp .status,
@@ -24,13 +25,13 @@
   min-width: 38px;
   margin-right: 1rem;
   font-size: 14px;
-  color: #848d95;
+  color: #3a3a3a;
   text-align: center;
 }
 .n__question-item .cp .mini-counts {
   font-size: 17px;
   font-weight: 300;
-  color: #6a737c;
+  color: #3a3a3a;
   margin-bottom: 4px;
 }
 .n__question-item .summary {
@@ -39,6 +40,15 @@
   float: none;
   margin: 0;
   overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .n__question-item .summary {
+    margin-top: 1rem;
+  }
+  .n__question-item .summary h3 {
+    margin-bottom: 1rem;
+  }
 }
 .n__question-item .summary h3 {
   font-size: 15px;
@@ -51,8 +61,8 @@
 .n__question-item .tags .post-tag {
   display: inline-block;
   padding: 0.4em 0.5em;
-  margin: 2px 2px 2px 0;
-  font-size: 11px;
+  margin: 2px 4px 2px 0;
+  font-size: .8rem;
   line-height: 1;
   white-space: nowrap;
   text-decoration: none;
@@ -72,6 +82,6 @@
   float: right;
 }
 .n__question-item .started .started-link {
-  font-size: 12px;
+  font-size: .8rem;
   color: #9199a1;
 }
