--- a/src/components/Topics/style.css
+++ b/src/components/Topics/style.css
@@ -1,58 +1,69 @@
-.n__topic-list {
+.n__question-list {
   display: flex;
   flex-direction: column;
 }
-.n__topic-item {
+.n__question-item {
   display: flex;
-  border: 1px solid #c1c1c1;
-  padding: 1.5rem;
+  border: 1px solid #dadada;
+  padding: 1rem;
   margin-bottom: 1rem;
-  border-radius: .1rem;
+  border-radius: .4rem;
   flex-wrap: wrap;
 }
-.n__topic-item .cp {
+.n__question-item .cp {
   display: flex;
   justify-content: flex-start;
   flex-wrap: nowrap;
   padding: 0 8px 0 0;
   font-size: 14px;
+
 }
-.n__topic-item .cp .votes,
-.n__topic-item .cp .status,
-.n__topic-item .cp .views {
+.n__question-item .cp .votes,
+.n__question-item .cp .status,
+.n__question-item .cp .views {
   display: inline-block;
   min-width: 38px;
   margin-right: 1rem;
   font-size: 14px;
-  color: #848d95;
+  color: #3a3a3a;
   text-align: center;
 }
-.n__topic-item .cp .mini-counts {
+.n__question-item .cp .mini-counts {
   font-size: 17px;
   font-weight: 300;
-  color: #6a737c;
+  color: #3a3a3a;
   margin-bottom: 4px;
 }
-.n__topic-item .summary {
+.n__question-item .summary {
   flex: 1 auto;
   width: auto;
   float: none;
   margin: 0;
   overflow: hidden;
 }
-.n__topic-item .summary h3 {
+
+@media (max-width: 768px) {
+  .n__question-item .summary {
+    margin-top: 1rem;
+  }
+  .n__question-item .summary h3 {
+    margin-bottom: 1rem;
+  }
+}
+.n__question-item .summary h3 {
   font-size: 15px;
   font-weight: 400;
 }
-.n__topic-item .tags {
+
+.n__question-item .tags {
   line-height: 18px;
   float: left;
 }
-.n__topic-item .tags .post-tag {
+.n__question-item .tags .post-tag {
   display: inline-block;
   padding: 0.4em 0.5em;
-  margin: 2px 2px 2px 0;
-  font-size: 11px;
+  margin: 2px 4px 2px 0;
+  font-size: .8rem;
   line-height: 1;
   white-space: nowrap;
   text-decoration: none;
@@ -65,13 +76,13 @@
   background-color: #e1ecf4;
   border-color: #e1ecf4;
 }
-.n__topic-item .started {
+.n__question-item .started {
   width: auto;
   line-height: inherit;
   padding-top: 4px;
   float: right;
 }
-.n__topic-item .started .started-link {
-  font-size: 12px;
+.n__question-item .started .started-link {
+  font-size: .8rem;
   color: #9199a1;
 }
