--- a/src/general.css
+++ b/src/general.css
@@ -166,7 +166,7 @@
 
 
 
-/* Style MyTopic */
+/* Start Style MyTopic */
 .link-tag{
     display: inline-block;
     padding: .4em .5em;
@@ -341,3 +341,25 @@
   }
   
 /* End Style Ask Question */
+
+/* Start Style Detail Question */
+.avaComment{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.commentBox{
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+.usernameComment{
+  padding-top: 15px;
+  padding-left: 20px;
+}
+.non-margin{
+  margin: 0px;
+}
+.non-padding{
+  padding: 0px;
+}
+/* End Style Detail Question */
