--- a/src/pages/Auth/style.css
+++ b/src/pages/Auth/style.css
@@ -1,12 +1,40 @@
 .auth-page {
-  height: 600px;
+  /* height: 600px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.auth-page .login,
+.auth-page .active,
+.auth-page .signup,
+.auth-page .forgot-password,
+.auth-page .change-password {
+  padding: 20px;
+  background: #f8f9fa;
+}
+.auth-page .social {
+  margin-bottom: 50px;
+}
+.auth-page .btn-social {
+  margin-bottom: 10px;
+}
+.auth-page .btn-social .btn {
+  width: 340px;
+  font-size: 13px;
+}
+.auth-page .btn-social .btn-fb {
+  background: #314a85;
+  color: #ffffff;
+}
+.auth-page .btn-social .btn-gg {
+  background: #f7f7f7;
+  color: rgba(0, 0, 0, 0.5);
+}
 .auth-page .input-group-prepend {
   padding: 5px;
+  justify-content: space-between;
+  font-size: 14px;
 }
 .auth-page .mb-3 .form-control {
   width: 300px;
