--- a/src/components/MyQuestion/style.css
+++ b/src/components/MyQuestion/style.css
@@ -1,77 +1,26 @@
-.link-tag{
-    display: inline-block;
-    padding: .4em .5em;
-    margin: 2px 2px 2px 0;
-    font-size: 11px;
-    line-height: 1;
-    white-space: nowrap;
-    text-decoration: none;
-    text-align: center;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 3px;
-    transition: all .15s ease-in-out;
-    font-size: 12px;
-    color: #39739d;
-    background-color: #E1ECF4;
-    border-color: #E1ECF4;
+.avaComment{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
   }
-  
-  a.link-tag:hover{
-    text-decoration: none;
-    color: #33658a;
-    background-color: #cee0ed;
-    border-color: #cee0ed;
-  }
-  
-  .list-group-item-hover:hover{
-    z-index: 1;
-    color: #495057;
-    text-decoration: none;
-    background-color: #f8f9fa;
-  }
-  
-  .btn:hover{
-    cursor: pointer;
-  }
-  
-  .avaUser{
-    width: 100%;
-    height: 100%;
-  }
-  
-  img{width: 100%; height: 100%;}
-  
-  .table td, .table th {border: none; padding: 0;}
-  .table td.userAva{
-    width: 70px;
-    height: 70px;
-  }
-  .table td.userName{
-    padding-top: 25px;
-    padding-left: 20px;
-  }
-  
-  .table tr.userItem{
-    display: block;
-    margin: 8px 0px;
+  .commentBox{
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
-    padding: 10px;
-    position: relative;
   }
-  
-  .table td.iconClose{
-    position: absolute;
-    right: 10px;
-    top: 8px;
+  .usernameComment{
+    padding-top: 10px;
+    padding-left: 20px;
   }
-  .table td.iconClose:hover{cursor: pointer;}
-  
-  @media (max-width: 1024px){
-    .avaUser{
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-    }
+  .non-margin{
+    margin: 0px;
   }
+  .non-padding{
+    padding: 0px;
+  }
+  button{
+      outline: none;
+  }
+  a{
+      outline: none;
+  }
+  .contentComment{padding: 5px 5px 0px 15px}
