--- a/src/pages/Auth/style.css
+++ b/src/pages/Auth/style.css
@@ -19,15 +19,15 @@
 .auth-page .btn-social {
     margin-bottom: 10px;
 }
-.auth-page .btn-social .btn {
+.auth-page .social .btn {
     width: 340px;
     font-size: 13px;
 }
-.auth-page .btn-social .btn-fb {
+.auth-page .social .btn-fb {
     background: #314a85;
     color: #ffffff;
 }
-.auth-page .btn-social .btn-gg {
+.auth-page .social .btn-gg {
     background: #f7f7f7;
     color: rgba(0, 0, 0, 0.5);
 }
