--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -3,7 +3,9 @@
         min-width: 600px;
     }
 }
-
+body {
+    background-color: rgb(239, 240, 241);
+}
 .auth-page {
     /* height: 600px; */
     display: flex;
