--- a/src/components/MyQuestion/style.css
+++ b/src/components/MyQuestion/style.css
@@ -6,6 +6,7 @@
   .commentBox{
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    background-color: #fff;
   }
   .usernameComment{
     padding-top: 10px;
