--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -4,7 +4,7 @@
     }
 }
 body {
-    background-color: rgb(239, 240, 241);
+    /* background-color: rgb(239, 240, 241); */
 }
 .auth-page {
     /* height: 600px; */
