--- a/src/pages/Auth/style.css
+++ b/src/pages/Auth/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(239, 240, 241);
+    /* background-color: rgb(239, 240, 241); */
 }
 .auth-page {
     /* height: 600px; */
